Develop feature to create a new patient with her emergency contact informations
